Update some form input fields with values in the "Form" exercise.

--- a/02. HTML Structure/07_Form/index.html
+++ b/02. HTML Structure/07_Form/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Form</title>
+  <title>Forms</title>
 </head>
 <body>
 
@@ -24,19 +24,19 @@
       <br />
       <div>
         <label for="male">Male</label>
-        <input type="radio" id="male" name="Gender">
+        <input type="radio" id="male" name="Gender" value="male">
         <label for="female">Female</label>
-        <input type="radio" id="female" name="Gender">
+        <input type="radio" id="female" name="Gender" value="female">
         <label for="other">Other</label>
-        <input type="radio" id="other" name="Gender">
+        <input type="radio" id="other" name="Gender" value="other">
       </div>
       <br />
       <div>
         <span>Preferred contact method: </span>
         <label for="email">Email</label>
-        <input type="radio" id="email" name="Preferred contact method">
+        <input type="radio" id="email" name="Preferred contact method" value="email">
         <label for="phone">Phone</label>
-        <input type="radio" id="phone" name="Preferred contact method">
+        <input type="radio" id="phone" name="Preferred contact method" value="phone">
       </div>
       <br />
       <div>
@@ -79,7 +79,7 @@
       </div>
       <br />
       <div>
-        <input type="checkbox" id="terms-and-conditions" name="Terms and Conditions">
+        <input type="checkbox" id="terms-and-conditions" name="Terms and Conditions" value="I agree">
         <label for="terms-and-conditions">I agree the Terms and Conditions</label>
       </div>
       <br />
